Updated & added blog posts

--- a/posts/ceremony.mdx
+++ b/posts/ceremony.mdx
@@ -16,7 +16,7 @@ Only the two of us, our photographer, and our celebrant were present for an inti
     alt="The Ceremony"
 />
 
-We wanted our ceremony to reflect a blend of ancient tradition and symbolism while also honoring the brightness of a future world filled with new promises.  To that end, we chose to have our wedding conducted by Siðmennt, the Icelandic Ethical Humanist Association.  They are a non-religious lifestance organization whose goal is to promote both secularism and humanism.
+We wanted our ceremony to reflect a blend of ancient tradition and symbolism while also honoring the brightness of a future world filled with new promises.  To that end, we chose to have our wedding conducted by <MDXLink title="Siðmennt, the Icelandic Ethical Humanist Association" href="https://www.sidmennt.is/en/"/>.  They are a non-religious lifestance organization whose goal is to promote both secularism and humanism.
 
 Siðmennt connected us with our celebrant (officiant), Kristrún, whom we then met over Zoom a couple of times before our trip to Iceland.  The day before our ceremony we also got to meet her in what was to become our favorite coffee spot and café in Reykjavík.  Kristrún wrote the most magical ceremony for us which centered around many of the stories we had been able to share with her about our history, as well as our plans for the future.
 
@@ -29,3 +29,5 @@ We chose to have four different cords, each representing an important piece of o
 * **Our Selves** – We made all four of the cords, but this one was unique in that we tied two separate pieces of fabric together.  One half was material from Jess’s dress, the other half material from Ryan’s attire.  The cord as a whole represented us joining together as one while promising to always appreciate all the qualities of each other as unique individuals.
 
 Our hands were wrapped in these cords, and then we each read our vows to one another.  We had each written our own vows (completing them at 2am the night before, in fact!), and by no means were they classified as short.  Turns out we had a lot to share at such a momentous point in life, and part of the reason we had chosen to elope was to experience this moment in particular.  Both our photographer and celebrant stepped back and we became so focused on each other that everything else simply melted away.  We exchanged our vows to each other, made each other laugh, cry, and embraced our wedding ceremony in the most monumental way we knew how.  All our planning up to this point had led to this, and we can say with certainty that every single one of those precious moments is burned into our memories forever.
+
+Vows exchanged, we then placed our rings onto each other’s hands – rings that we had in fact each handmade with those hands.  Then, we pulled our handfasting cords through to create that symbolic knot… and viola, we were married!  Our first moments as husband and wife were spent embracing on the shores of Seltjarnarnes, volcanic mist and dandelions drifting through the air.  There is no other real way to describe the feelings in that moment except to say that we were now officially joined as one, as we feel we in fact always have been…
