--- a/posts/legally-married.mdx
+++ b/posts/legally-married.mdx
@@ -21,7 +21,7 @@ Three reasons:
 
 1. Since we were going to all this effort to get married in Iceland anyway, it just wouldn’t have felt the same to us if the actual marriage certificate wasn’t in Icelandic.  Plus, we thought having an Icelandic marriage license would be really cool.
 2. We inadvertently discovered, as we were doing our research on how to make this all work, that most countries have a formal marriage registry.  It’s basically a big database of records for everyone that ever got married.  Seems like a pretty logical and straightforward thing to have, right?  Yet the United States doesn’t have one!  Marriages here are recorded by each state, and they each keep those records however they will.  Nationally, there is no consensus on how to do this, and thus no database.  When we discovered this, it just gave us extra ammo for wanting our names recorded side by side… at least it would officially be in someone’s database of marriages!
-3. Jess is actually nuts enough that she *ahem* luxuriated in the challenge of communicating with multiple government agencies in both the U.S. and Iceland.  No really, she actually wanted to and even kinda enjoyed the experience :)
+3. Jess is actually nuts enough that she *ahem* luxuriated in the *challenge* of communicating with multiple government agencies in both the U.S. and Iceland.  No really, she actually wanted to and even kinda enjoyed the experience :)
 
 ## What we had to do before we went to Iceland:
 
@@ -29,6 +29,7 @@ Here’s a rundown!  Make no mistake, it looks all easy when it’s laid out in 
 
 1. We reached out to <MDXLink title="Siðmennt" href="https://www.sidmennt.is/"/>, the Ethical Humanist Association of Iceland to request a **celebrant** (officiant).  We wanted a non-religious ceremony, and appreciate as well as agree with the values of Siðmennt.
 2. For the legal parts in Iceland, we communicated with <MDXLink title="Sýslumenn (The Commissioner’s Office)" href="https://island.is/s/syslumenn"/>.  There are several documents they required us to submit.  Some were straightforward, such as Birth Certificates and Passports.  Our personal favorite document was <MDXLink title="Hjónavígsluskýrsla (Marriage Notification)" href="https://www.skra.is/umsoknir/eydublod-umsoknir-og-vottord/stok-vara/?productid=aa1672b9-ec79-11e6-9442-005056851dd2"/>.  We had an embarrassing hiccup with this document (details in next section).  We also needed a **Certificate of Marital Status**.  Remember how the U.S. doesn’t have a marriage database?  Well, that means we can’t get a Certificate of Marital Status, so instead we had to…
+<B2Image filename="iceland/blog/Hjónavígsluskýrsla_dim_1866x1205.jpg" width="1866" height="1205" alt="Hjónavígsluskýrsla"/>
 3. Request a **Search of Vital Records for Marriage** in our home state.  We ended up doing this in Montana, and it was a challenge to have timely communications with them during the height of COVID.
 4. We needed above mentioned Search to be official with an **Apostille**.  These are entirely separate offices, and the Vital Statistics office was more than a bit confused about why we needed our search of vital records to have an apostille.  Apparently, they don’t get this request often.
 
@@ -44,7 +45,7 @@ This smooth, easy process is NOT how things went for us, because we made a rathe
 
 ## What we had to do upon our return from Iceland:
 
-1. We first contacted **Þjóðskrá (The Registration Office)** in Iceland to request certified copies of our marriage license.  Several copies arrived in the mail a few weeks later, and then we began the process of trying to figure out how to file them in a country that doesn’t have a national marriage registry…
+1. We first contacted <MDXLink title="Þjóðskrá (The Registration Office)" href="https://www.skra.is/english/"/> in Iceland to request certified copies of our marriage license.  Several copies arrived in the mail a few weeks later, and then we began the process of trying to figure out how to file them in a country that doesn’t have a national marriage registry…
 2. If you do your research about validating a marriage license from another country in the United States, everything says to contact the **Office of the Attorney General**.  Full disclosure, Jess did this in two separate states (Montana and Washington).  In both cases she was sent to various other offices and told that the Attorney General does not handle this in any capacity.  Proof that Google is not always right.  After several dead ends of calling different offices, the Vital Records Office was able to point us in a good direction.  
 3. Turns out the answer is way simpler than we (and nearly everyone in the Attorney General’s office) thought.  The **Clerk and Recorders Office** is where we eventually ended up.  They took a copy of our Icelandic marriage license, uploaded it into the State’s official records, and voila!  We even have a document number where we can look it up.
 4. And last but not least… we _both_ changed our last names!
