--- a/posts/misadventure.mdx
+++ b/posts/misadventure.mdx
@@ -11,11 +11,11 @@ We arrived on the shores of Keflavík, severely disoriented and jetlagged from o
 
 We were also starving, we had just picked up our rental car, and were figuring out how to drive this new-to-us car on foreign streets for the first time ever.  We hadn’t seen a shower or toothbrush in who knows how long (seriously, we didn’t know, with the disorientation of travel).  Any logical person would first seek to remedy some of these basic human needs.  Food, cleanliness, perhaps a nap, or reorientation of the senses in general.
 
-We had our map queued up and were heading into Reykjavík proper, but we happened to know that the Commissioner’s office is on the way and they just opened for the day.  Why don’t we just stop and quickly verify our paperwork?  Shouldn’t take too long for them to take photocopies of our passports and hand us our license to wed, right?
+We had our map queued up and were heading into Reykjavík proper, but we happened to know <MDXLink title="Sýslumenn (The Commissioner’s Office)" href="https://island.is/s/syslumenn"/> is on the way and they just opened for the day.  Why don’t we just stop and quickly verify our paperwork?  Shouldn’t take too long for them to take photocopies of our passports and hand us our license to wed, right?
 
 **WRONG!**
 
-We pulled into a parking lot of what our map announced should be the Icelandic Commissioner’s Office.  In no way did this building have a giant sign on it indicating such, in fact it just looked like one of five normal office buildings.  I should also mention here that our international phone plan through Verizon was not all they claimed it to be, so we were without internet capabilities to look any of this up or figure out if we were even in the right place.  Our view:
+We pulled into a parking lot of what our map announced should be <MDXLink title="Sýslumaðurinn á höfuðborgarsvæðinu (The District Commissioner of Greater Reykjavik)" href="https://goo.gl/maps/Zzvb88n2onyPQBqN7"/>.  In no way did this building have a giant sign on it indicating such, in fact it just looked like one of five normal office buildings.  I should also mention here that our international phone plan through Verizon was not all they claimed it to be, so we were without internet capabilities to look any of this up or figure out if we were even in the right place.  Our view:
 
 <Image
     src="https://lh5.googleusercontent.com/p/AF1QipPiJGt5Wc1TwafzbrAhaL7D5mRrUdbo_1hbpGpE"
@@ -36,7 +36,7 @@ We held our breath as we opened that solid wood door.  A short hardwood floored 
 
 Jess introduced herself and explained she had been communicating with their office over email for the past couple months, we were getting married on July 4th and had everything arranged and were now there to turn in hardcopies of our formal documents.  Our past communications were easily identified, then our documents were handed over, and we breathed a sigh of relief.  Things were going well so far.
 
-Until she got to the Marriage Notification document, which is basically a document we sign declaring we aren’t already married, and have two friends back home sign witnessing that we are in fact real people, and aren’t married.  Sternly, she asked, “Where is the original copy of this?  We have all of your documents approved and ready, but we just need this one.”  Confused, we told her this was in fact the original copy.  Equally confused, she asked how our witnesses had signed.
+Until she got to the Hjónavígsluskýrsla (Marriage Notification) document, which is basically a document we sign declaring we aren’t already married, and have two friends back home sign witnessing that we are in fact real people, and aren’t married.  Sternly, she asked, “Where is the original copy of this?  We have all of your documents approved and ready, but we just need this one.”  Confused, we told her this was in fact the original copy.  Equally confused, she asked how our witnesses had signed.
 
 Starting to realize the issue and feeling like complete dunces, we said that our witnesses had signed the document digitally, and this copy on hand was in fact, the original.
 
@@ -58,7 +58,7 @@ As suspected, she told us that they could under no circumstances accept the docu
     src="https://i.kym-cdn.com/entries/icons/original/000/012/589/patrickstar.jpg"
     width="240"
     height="249"
-    alt="The District Commissioner of Greater Reykjavik"
+    alt="Shocked"
 />
 
 To really drive home her point, she took the paper between her fingers and rubbed it, explaining that this was a living document, and if she couldn’t physically feel that nice pen and ink signature on the paper, it wasn’t valid.  Then, perhaps unnecessarily, she again repeated something along the lines of canceling the marriage application, “Unless you can get real signatures between now and the 4th, but we are closed over the weekend.  We are only open tomorrow, and only until 1400, so you would have to have signatures before then and I just don’t see how you can do that, because someone here in the country would have to vouch for you saying that they know you and that you aren’t already married.  They would have to be willing to legally sign for this.  So, I’m sorry, but I’m afraid there’s really nothing we can do.”
@@ -84,5 +84,5 @@ And there you have it.  The story of how we made a silly mistake on a signature,
     src="https://lh5.googleusercontent.com/p/AF1QipMUFOMaTtKhInHGpM4BcvIV5jvU7eCDaJWyjM_H"
     width="512"
     height="512"
-    alt="The District Commissioner of Greater Reykjavik"
+    alt="The Omelette at The Coocoo's Nest in Reykjavik"
 />
