--- a/posts/planning-elopement.mdx
+++ b/posts/planning-elopement.mdx
@@ -19,9 +19,16 @@ type: 'travel'
 We have always, as long as we can remember, spent July 4th together, often just the two of us.  We don’t always do anything out of the ordinary, but we liked the odds of always having our anniversary fall on a day we likely would never be working!  Apart from that, we got engaged on a 4th of July several years back…
 
 * **July 4th, 2016** – We were engaged with what we fondly refer to as, “a bottle of dirt.”  It was a gallon sized bottle of dirt from our local sapphire mine in Montana, which Ryan had picked up with the idea of mining together to find a gem for a wedding ring.
-* **July 4th, 2017** – We moved to Los Alamos, NM!  (Hard to plan a wedding while moving!)
-* **July 4th, 2018** – We moved to Bozeman, MT! (Hurray for more moving!)
-* **July 4th, 2019** – We moved to Whidbey Island, WA (sensing a trend yet?).  However, this particular July 4th we went to a workshop in Port Townsend called “With These Rings,” where we handmade each other’s wedding bands.
+* **July 4th, 2017** – We lived in Los Alamos, NM, and enjoyed a date to the annual fireworks show in next door White Rock.  (Hard to plan a wedding when we'd just moved!)
+* **July 4th, 2018** – We now lived in Bozeman, MT, and spent the evening at our favorite fireworks watching spot on Waterworks hill over in Missoula.  (Hurray for having just moved again!)
+* **July 4th, 2019** – We had moved to Whidbey Island, WA (sensing a trend yet?).  However, this particular July 4th we went to a workshop in Port Townsend called “With These Rings,” where we handmade each other’s wedding bands.
+
+<B2Image
+    filename="iceland/blog/WithTheseRings00_dim_675x540.jpg"
+    width="675"
+    height="540"
+    alt="Our rings forged by our hands, now fluorishing under sparklers!"
+/>
 
 It was at this point in 2019 we found ourselves in full swing of wedding planning, because we’d decided that despite our rather cumbersome tendency to be moving every f*&%#@$ year, we still wanted to get married.
 
@@ -35,8 +42,14 @@ In fact we were more excited about planning our dream honeymoon destination, whi
 
 The incompatibility of this detailed foreign adventure in contrast with our lack of enthusiasm for wedding planning at home finally came to a head one night when we were woefully scrolling through photos of Iceland yet again.  Would we even have the resources left to have a trip here the same year we were to host a wedding?  Wouldn’t it be nice to just elope and forgo all the stress of coordinating vendors?  If we combined wedding with honeymoon, we’d get to do something romantic while also seeing a part of the world we wanted to see!
 
-A couple of days later we met our photographer, Steph, in a phone call to discuss eloping in Iceland.  Shall I say the rest is history?  It really is.  We cancelled our traditional wedding plans and started refocusing on eloping in Iceland.  This was not a decision made lightly, but it was the right one for us and our circumstances.  The rest of the elopement story went like this:
+A couple of days later we met our photographer, <MDXLink title="Steph Zakas" href="https://www.zakasphotography.com/"/>, in a phone call to discuss eloping in Iceland.  Shall I say the rest is history?  It really is.  We cancelled our traditional wedding plans and started refocusing on eloping in Iceland.  This was not a decision made lightly, but it was the right one for us and our circumstances.  The rest of the elopement story went like this:
 
 * **July 4th, 2020** – The day we were supposed to get married in Iceland, but a little thing called COVID delayed us.
 * **July 4th, 2021** – We were married in  Seltjarnarnes, Iceland, with an elopement day spent exploring the Snæfellsnes peninsula!
 
+<B2Image
+    filename="iceland/elopement/R_J_ICELAND_ELOPEMENT_643_dim_1920x1280.jpg"
+    width="1920"
+    height="1280"
+    alt="Looking out towards Snæfellsjökull volcano with Kirkjufell behind us"
+/>
