more updates to the blog post mdx files.

--- a/posts/wedding-dress.mdx
+++ b/posts/wedding-dress.mdx
@@ -13,7 +13,7 @@ I didn’t choose to design a wedding dress, it chose me.  Or at least, that’s
     filename="iceland/blog/dress00_dim_2173x1021.JPG"
     width="2173"
     height="1021"
-    alt="The Ceremony"
+    alt=""
 />
 
 ## There were two things against me: 
@@ -44,14 +44,14 @@ She got to work quickly, sending a concept sketch based on my document of ideas,
     filename="iceland/blog/dress01_dim_1599x985.JPG"
     width="1599"
     height="985"
-    alt="The Ceremony"
+    alt=""
 />
 
 <B2Image
     filename="iceland/blog/dress02_dim_609x905.JPG"
     width="609"
     height="905"
-    alt="The Ceremony"
+    alt=""
 />
 
 In parallel with concept sketches, Amy sent me on a quest to obtain several measurements so she could start sewing an accurate mockup.  This mission took us back to our local bridal shop, where Ryan patiently waited in the car.  At one point, one of the workers came up and excitedly beckoned me over, declaring he had, “Never seen such a perfect illustration of the couple’s experience of wedding dress shopping!”  Taking me over to the window he asked, “Is that your fiancé?”  And there was Ryan, sitting in the car with his head completely back against the headrest, completely sound asleep, mouth agape (he denies this part).  Sadly, he woke up just as I tried to snap a photo… alas, it’s a fun memory we both laugh about now!
@@ -62,11 +62,11 @@ Dimensions sent to Amy, she sewed the first mock-up of my dress and sent it in t
     filename="iceland/blog/dress03_dim_2060x1021.JPG"
     width="2060"
     height="1021"
-    alt="The Ceremony"
+    alt="An example of one of the early mockups... packages were always exciting to receive in the mail!"
 />
 
 ## A Change in Plans
-Then our wedding plans changed (see A Plan to Elope in Iceland Hatches).  The long sleeves were back on the table, and we had several new design ideas to fit the occasion of Iceland.  Some of the ideas stemmed from me, some from Amy.  This is perhaps the point at which I most enjoyed the whole process, because I could start to see the personality of the dress emerging.  Amy and I were also collaborating rather fluently, and I thoroughly enjoyed working with her!  I can honestly say I feel I came away from this experience with a friend.
+Then our wedding plans changed (see <MDXLink title="A Plan to Elope in Iceland Hatches" href="/posts/planning-elopement"/>).  The long sleeves were back on the table, and we had several new design ideas to fit the occasion of Iceland.  Some of the ideas stemmed from me, some from Amy.  This is perhaps the point at which I most enjoyed the whole process, because I could start to see the personality of the dress emerging.  Amy and I were also collaborating rather fluently, and I thoroughly enjoyed working with her!  I can honestly say I feel I came away from this experience with a friend.
 
 Our new design concept tried to give it a more “ancient” feel, and we’d also sprung upon the idea of using both white and bronze colored lace. 
 
@@ -74,21 +74,21 @@ Our new design concept tried to give it a more “ancient” feel, and we’d al
     filename="iceland/blog/dress04_dim_1881x1273.JPG"
     width="1881"
     height="1273"
-    alt="The Ceremony"
+    alt=""
 />
 
 <B2Image
     filename="iceland/blog/dress05_dim_2125x788.JPG"
     width="2125"
     height="788"
-    alt="The Ceremony"
+    alt="Bronze Lace options... I picked the middle!"
 />
 
 <B2Image
     filename="iceland/blog/dress06_dim_2266x617.JPG"
     width="2266"
     height="617"
-    alt="The Ceremony"
+    alt="Underskirt materials... I picked the third option!"
 />
 
 While Amy sewed a third mock-up, I chose the laces and underskirt material, and then started looking for some accessories… mainly boots!
@@ -99,7 +99,7 @@ We put things on pause for a while to see what the situation might bring.  Gradu
 
 The mock-up fit well, and she began to sew the dress itself, sending me periodic photos.  I could hardly contain my excitement, especially since we’d had to postpone our wedding an entire year, and seeing photos of the dress coming together throughout that winter was a big help in keeping my spirits up.  Unfortunately, Ryan did not get this luxury.  Instead, he had to listen to my excited exclamations now and again, knowing what they were about but never getting to see the details!  We were now into year number two of him carefully avoiding looking at either my phone or my computer screen just in case a photo popped up!
 
-## The Dress is Made
+## The completed Dress
 
 Here are some photos Amy sent upon completing the dress.  I would just like to point out that all the lace was handsewn.  Consider this, and then look at that cape and all its cutouts.  Amy, if you are reading this, you are seriously skilled and I cannot ever begin to thank you enough.  Thank you, thank you, thank you, for making such a work of art which I was fortunate to get to wear on the day of my wedding, and I hope you are not still seeing bronze lace in your sleep!
 
@@ -107,21 +107,21 @@ Here are some photos Amy sent upon completing the dress.  I would just like to p
     filename="iceland/blog/dress07_200_dim_1547x1125.JPG"
     width="1547"
     height="1125"
-    alt="The Ceremony"
+    alt=""
 />
 
 <B2Image
     filename="iceland/blog/dress08_dim_1651x1124.JPG"
     width="1651"
     height="1124"
-    alt="The Ceremony"
+    alt=""
 />
 
 <B2Image
     filename="iceland/blog/dress09_dim_990x660.JPG"
     width="990"
     height="660"
-    alt="The Ceremony"
+    alt=""
 />
 
 After receiving these photos, I was more than a little ready to jump on a plane to Iceland and just meet it there!  To contain my excitement a bit, I started making my own hair vine.  It helped… a slight bit. :/
@@ -130,25 +130,26 @@ The dress arrived in the mail in a couple of weeks, since thankfully shipping wa
 
 Can you believe we packed it away in a suitcase and put it on an airplane?  This dress is quite literally a world traveler now.  From New Zealand, to both Montana and Washington states, and finally all over Iceland and back!
 
+## Our First Look
 It was well worth it, though, and all of that hard work designing it, and the extra waiting due to COVID, built up an anticipation which lent our first look a little extra magic.
 
 <B2Image
     filename="iceland/blog/dress10_180_dim_1655x1124.JPG"
     width="1655"
     height="1124"
-    alt="The Ceremony"
+    alt="Our First Look on our Wedding Day"
 />
 
 <B2Image
     filename="iceland/blog/dress11_200_dim_1320x880.JPG"
     width="1320"
     height="880"
-    alt="The Ceremony"
+    alt=""
 />
 
 <B2Image
     filename="iceland/blog/dress12_143_dim_1320x880.JPG"
     width="1320"
     height="880"
-    alt="The Ceremony"
+    alt=""
 />
