updated blog metadata and order

--- a/posts/pronunciation.mdx
+++ b/posts/pronunciation.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'The Iceland Language'
-date: '2022-06-25'
+title: 'The Icelandic Language'
+date: '2022-06-30'
 description: 'Pronunciation Guide & The Icelandic Language'
 type: 'travel'
 ---
