removed sticky mdx headers and album hover

--- a/posts/pronunciation.mdx
+++ b/posts/pronunciation.mdx
@@ -33,7 +33,7 @@ Our understanding is certainly a work in progress!
     alt=""
 />
 
-## Some examples of the language
+## Some examples of Icelandic:
 
 <B2Image
     filename="iceland/blog/language/language01_dim_3212x2370.JPG"
